--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^5.2.2",
+    "@sanity/image-url": "^1.0.2",
+    "@stripe/stripe-js": "^1.48.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stripe": "^11.14.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6"
